# FREDS

./: .gitignore  Cargo.toml  LICENCE  README.md  strucure.binstruct  test.freds.hexproj  test.writer  test_big.freds  test_book.freds  test_jsonorg.freds  test_misc.freds  test_simple.freds
benches/: bench.rs
src/: lib.rs
src/data/: constants.rs  inline.rs  mod.rs
src/data/traits/: inline.rs  mod.rs  referential.rs
src/error/: mod.rs
src/freds/: element.rs  from_file.rs  kind.rs  mod.rs  reader.rs
src/implementations/: mod.rs
src/implementations/inline/: bool.rs  mod.rs  null.rs  numeric.rs
src/implementations/referential/: array.rs  map.rs  mod.rs  string.rs
src/implementations/serde_json/: mod.rs  test_misc.json
src/manager/: element.rs  kind.rs  mod.rs
src/reader/: element.rs  kind.rs  mod.rs  value.rs
src/reference/: mod.rs  relation.rs
src/writer/: element.rs  kind.rs  mod.rs
