[package]
	name = "freds"
	version = "0.0.2"
	authors = ["Kyran Gostelow <kyran@gostelow.me>"]
	edition = "2021"
	description = "FREDS: Flexible Referencing Extensible Data Store"
	license = "Apache-2.0"
	repository = "https://github.com/KyGost/FREDS"
	readme = "README.md"
	keywords = ["storage", "database", "extensible", "serde", "query-engine"]
	metadata.docs.rs.all-features = true

[features]
	default = ["read", "write", "serde", "serde_json"]
	read = []
	write = ["tokio"]

[dependencies]
	serde = {version = "1", optional = true}
	serde_json = {version = "1", optional = true}
	tokio = {version = "1", optional = true, features = ["fs", "io-util", "rt", "rt-multi-thread"]}
